--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-dashboard",
-  "homepage": "https://kedistS.github.io/workflow-test-training",
+  "homepage": "https://yotors.github.io/admin-dashboard-training",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
